--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <title>NuCamp: A Better Way To Camp</title>
 </head>
 
-<body>
+<body> 
 
-    <header class="jumbotron jumbotron-fluid">
+    <!-- <header class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="row">
                 <div class="col-4 col-sm-3 col-md-2 align-self-center">
@@ -36,31 +36,41 @@
                 </div>
             </div>
         </div>
+    </header> -->
+    <header>
+        <nav class="navbar navbar-expand-sm sticky-top">
+            <div class="container">
+                <a class="navbar-brand" href="#"><img src="img/logo.png" height="30" width="30" /></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collape navbar-collapse" id="nucampNavbar">
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link text-black" href="#"><i class="fa fa-home fa-lg"></i> Home</a></li>
+                        <li class="nav-item"><a class="nav-link text-black" href="aboutus.html"><i class="fa fa-info fa-lg"></i> About</a></li>
+                        <li class="nav-item"><a class="nav-link text-black" href="#"><i class="fa fa-list fa-lg"></i> Sites</a></li>
+                        <li class="nav-item"><a class="nav-link text-black" href="contactus.html"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
+                    </ul>
+                    <span class="navbar-text ml-auto">
+                        <a role="button" data-toggle="modal" data-target="#loginModal">
+                            <i class="fa fa-sign-in text-black"></i>Login
+                        </a>
+                    </span>
+                </div>
+            </div>
+        </nav>
     </header>
 
-    <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
+    <section class="hero">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="img/logo.png" height="30" width="30" /></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
-            <button class="navbar-toggler" type="button" 
-            data-toggle="collapse" data-target="#nucampNavbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collape navbar-collapse" id="nucampNavbar">
-                <ul class="navbar-nav">
-                    <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-home fa-lg"></i> Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="aboutus.html"><i class="fa fa-info fa-lg"></i> About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i> Sites</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
-                </ul>
-                <span class="navbar-text ml-auto">
-                    <a role="button" data-toggle="modal" data-target="#loginModal">
-                        <i class="fa fa-sign-in"></i>Login
-                    </a>
-                </span>
+            <div class="row row-content">
+                <div class="col p-4">
+                    <h1>Nucamp</h1>
+                    <h2>A better way to camp</h2>
+                </div>
             </div>
         </div>
-    </nav>
+    </section>
 
     <div id="loginModal" class="modal fade" role="dialog">
         <div class="modal-dialog" role="document">
@@ -101,49 +111,7 @@
 
     <div class="container">
 
-        <div class="row row-content">
-            <div class="col-md-8 mx-auto">
-                <div id="homeCarousel" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#homeCarousel" data-slide-to="0" class="active"></li>
-                        <li data-target="#homeCarousel" data-slide-to="1"></li>
-                        <li data-target="#homeCarousel" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="img/breadcrumb-trail.jpg" alt="Breadcrumb Trail Campground" class="d-block w-100">
-                            <div class="carousel-caption">
-                                <h3>Breadcrumb Trail Campground</h3>
-                                <p class="d-none d-sm-block">Let Nucamp be your guide to this off-the-beaten-path, hike-in-only campground.</p>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img src="img/react-lake.jpg" alt="React Lake Campground" class="d-block w-100">
-                            <div class="carousel-caption">
-                                <h3>React Lake Campground</h3>
-                                <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img src="img/chrome-river.jpg" alt="Chrome River Campground" class="d-block w-100">
-                            <div class="carousel-caption">
-                                <h3>Chrome River Campground</h3>
-                                <p class="d-none d-sm-block">Spend a few sunny days and starry nights beneath a canopy of old-growth firs at this enchanting spot by the Chrome River.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <a class="carousel-control-prev" href="#homeCarousel" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#homeCarousel" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
-        </div>
-    </div>
+            <!--  -->
 
         <div class="row row-content align-items-center">
             <div class="col-sm-4 order-sm-last col-md-3">
